<resources>
    <string name="app_name">Book App</string>
    <string name="editor_activity_title_new_book">Add a Book</string>
    <string name="product_name">Book Name</string>
    <string name="quantity">Quantity</string>

    <string name="category_price">Unit Price</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_phone">Supplier Phone</string>
    <string name="hint_product_name">Name</string>
    <string name="hint_product_price">Price</string>
    <string name="unit_product_price">$</string>
    <string name="hint_supplier_name">Supplier</string>
    <string name="hint_supplier_phone">Phone</string>

    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>

    <string name="action_insert_new_book">Insert New Book</string>
    <string name="action_delete_all_entries">Delete All Books</string>

    <string name="empty_view_title_text">Your book store is empty...</string>
    <string name="empty_view_subtitle_text">Get started by adding a book!</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>
    <!-- Dialog button text for the option to keep editing the current pet [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Dialog message to ask the user to confirm deleting the current pet [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this book?</string>
    <!-- Dialog button text for the option to confirm deleting the current pet [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>
    <!-- Dialog button text for the option to cancel deletion of the current pet [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Toast message in editor when current pet was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_book_successful">Book deleted</string>
    <!-- Toast message in editor when current pet has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_book_failed">Error with deleting book</string>
</resources>
